# thumbnailer

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  vite.config.js
.claude/skills/bmad-agent-analyst/: SKILL.md
.claude/skills/bmad-agent-architect/: SKILL.md
.claude/skills/bmad-agent-dev/: SKILL.md
.claude/skills/bmad-agent-pm/: SKILL.md
.claude/skills/bmad-agent-tech-writer/: SKILL.md
.claude/skills/bmad-agent-ux-designer/: SKILL.md
.claude/skills/bmad-architecture/: SKILL.md
.claude/skills/bmad-brainstorming/: SKILL.md
.claude/skills/bmad-check-implementation-readiness/: SKILL.md
.claude/skills/bmad-checkpoint-preview/: generate-trail.md
.claude/skills/bmad-cis-agent-brainstorming-coach/: SKILL.md
.claude/skills/bmad-cis-agent-creative-problem-solver/: SKILL.md
.claude/skills/bmad-cis-agent-storyteller/: SKILL.md
.forgejo/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
ci/runner-image/: Dockerfile
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gensheet.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  extract.rs  ffmpeg.rs  lib.rs  main.rs  pipeline.rs  probe.rs  queue.rs  render.rs  templates.rs  theme.rs  types.rs
src-tauri/tests/: pipeline_test.rs
src/lib/: Editor.svelte  EmptyState.svelte  FfmpegPrompt.svelte  Header.svelte  QueueRail.svelte  SettingsModal.svelte  TemplateEditor.svelte  TemplateGallery.svelte  state.svelte.js
src/routes/: +page.svelte
(+86 files in other folders)
