[package]
name = "thumbnailer"
version = "0.3.2"
description = "Bulk video → contact sheets + animated WebP previews, under a size target"
authors = ["Yun"]
edition = "2021"

[lib]
name = "thumbnailer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
webp = "0.3"
ab_glyph = "0.2"
webp-animation = "0.9"
thiserror = "2"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
